# protein_analyser

./: .env.example  .gitignore  AGENTS.md  README.md  cli.py  db_builder.py  generate_explanations.py  generate_rerun.py  protein_analyser.db  pyproject.toml  requirements.txt  rerun_all.sh  scorer.py  update_schema_instructions.py
.opencode/plans/: agents_creation.md
extractors/: __init__.py  aminoacid.py  base.py  nutrition.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: ClientPage.tsx  layout.tsx  page.tsx
frontend/app/aminoacids/: page.tsx  (+1 more)
frontend/components/: AskData.tsx  ExplainButton.tsx  Leaderboard.tsx  ModeToggle.tsx  Navigation.tsx  ScoreChart.tsx
frontend/lib/: supabase.ts
output/CosmixPlantProtein/: CosmixPlantProtein.json
output/ON_vanilla/: ON_vanilla.json
output/OriginPlantProtein/: OriginPlantProtein.json
output/happycultures/: happycultures.json
output/millePlantProtein/: millePlantProtein.json
output/muscle_blaze/: muscle_blaze.json
output/oziva/: oziva.json
output/superyou/: superyou.json
output/truebasics/: truebasics.json
output/trunativ/: trunativ.json
output/wellbeing/: wellbeing.json
output/wholetruth/: wholetruth.json
skills/: extract_aminoacid_profile_v1.prompt.md  extract_aminoacid_profile_v1.schema.json  extract_aminoacid_profile_v1.yml  extract_nutrition_label_v1.prompt.md  extract_nutrition_label_v1.schema.json  extract_nutrition_label_v1.yml  scoring_spec.yml
supabase/: add_explanations.sql  schema.sql
tests/: conftest.py  test_extractor.py  test_integration.py
(+6 files in other folders)
